name:                primes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/primes#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:
      src
  build-depends:
      base
  exposed-modules:
      Primes
  other-modules:
      Sieve
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs:
      test
  build-depends:
      base
    , hspec
    , primes
  default-language: Haskell2010